src/tailwind/components-extra/drawer.css
@reference "../global.css";

/* Additional styles for the drawer component that rely on CSS features not
supported by Tailwind. */
@layer components {
  .drawer-root {
    container-type: scroll-state;

    .drawer-header,
    .drawer-footer {
      @apply border-transparent;
    }

    @container scroll-state(scrollable: top) {
      .drawer-header {
        @apply border-b border-gray-400;
        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-900) r g b / 0.3);
      }
    }

    @container scroll-state(scrollable: bottom) {
      .drawer-footer {
        @apply border-t border-gray-400;
        box-shadow: 0 0 0.5rem 0 rgb(from var(--color-gray-900) r g b / 0.3);
      }
    }
  }

  @supports not (container-type: scroll-state) {
    .drawer-root {
      .drawer-header {
        @apply border-b border-gray-400;
      }

      .drawer-footer {
        @apply border-t border-gray-400;
      }
    }
  }
}

